--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
-// package.json
 {
-    "name": "dar-abuein",
+    "name": "dar-abuein-rtl",
     "description": "A theme used on abuein.com with RTL support",
-    "version": "0.5.0",
+    "version": "1.0.0",
     "license": "MIT",
     "author": {
         "name": "Salaheddin AbuEin",
         "email": "sabuein@gmail.com"
     },
+    "keywords": ["ghost-theme", "ghost-theme-rtl", "ghost-rtl", "ghost"],
     "screenshots": {
         "desktop": "assets/images/screenshot-desktop.jpg",
         "mobile": "assets/images/screenshot-mobile.jpg"
     },
     "config": {
         "posts_per_page": 10,
-        "image_sizes": {},
+        "card_assets": true,
+        "image_sizes": {}
     }
 }
